Clarify docstrings and example

--- a/examples/Example.ipynb
+++ b/examples/Example.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Examples\n",
     "\n",
-    "This notebook shows a simple example of how to use `tempstruc` to test for oscillations in a time-series."
+    "This notebook shows a simple example of how to use `oscina` to test for oscillations in a time-series."
    ]
   },
   {
@@ -20,9 +20,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import sys\n",
-    "sys.path.append('..')\n",
-    "\n",
     "import oscina\n",
     "\n",
     "np.random.seed(0)  # Set the random seed for reproducibility"
@@ -68,7 +65,7 @@
    "id": "54361cf4-e900-454c-a6bf-f19aba3dc7cf",
    "metadata": {},
    "source": [
-    "The AR surrogate and robust est. methods require a time-series that has already been averaged for each time-point. In contrast, the time-shuffled methods (LF2012 and FSK2013) require the raw data, with individual trial outcomes and time-stamps."
+    "The AR surrogate and robust est. methods require a time-series that has already been aggregated for each time-point. (This could be an accuracy, average RT, d', etc.) In contrast, the time-shuffled methods (LF2012 and FSK2013) require the raw data, with individual trial outcomes and time-stamps."
    ]
   },
   {
@@ -121,6 +118,14 @@
     "plt.plot(t_avg, x_avg, '-k')\n",
     "plt.xlabel('Time (s)')\n",
     "plt.ylabel('Amplitude')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9187de62-07da-4d6c-93e6-5306f4981d6a",
+   "metadata": {},
+   "source": [
+    "Now let's use each method to find statistically significant rhythms. We'll plot the spectrum found by each method, and add a red star at each frequency with a significant rhythmic component. For methods that provide confidence intervals, we'll plot the 95% CI as a dotted line."
    ]
   },
   {
